tests/hm_typing/error_namespace_local_var.sy
start :: fn do
    a :: 0
    b: a.A = 0
end

// error: $Exotic
